--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -5,21 +5,9 @@
       <tool tool-id="symfony" tool-name="Symfony"/>
     </header>
     <body>
-      <trans-unit id="7bRlYkK" resname="note">
-        <source>note</source>
-        <target>NOTE</target>
-      </trans-unit>
-      <trans-unit id="lzgBh6h" resname="tip">
-        <source>tip</source>
-        <target>TIP</target>
-      </trans-unit>
       <trans-unit id="tbB2gib" resname="not_available">
         <source>not_available</source>
         <target>Not available</target>
-      </trans-unit>
-      <trans-unit id="F0dwSb7" resname="mit_license">
-        <source>mit_license</source>
-        <target>MIT License</target>
       </trans-unit>
       <trans-unit id="DF34uM2" resname="http_error.name">
         <source>http_error.name</source>
@@ -57,10 +45,6 @@
         <source>http_error_500.suggestion</source>
         <target><![CDATA[Try loading this page again in some minutes or <a href="%url%">go back to the homepage</a>.]]></target>
       </trans-unit>
-      <trans-unit id="0azKJvE" resname="title.homepage">
-        <source>title.homepage</source>
-        <target><![CDATA[Welcome to the <strong>Symfony Demo</strong> application]]></target>
-      </trans-unit>
       <trans-unit id="9RwuNlf" resname="title.source_code">
         <source>title.source_code</source>
         <target>Source code used to render this page</target>
@@ -73,333 +57,105 @@
         <source>title.twig_template_code</source>
         <target>Twig template code</target>
       </trans-unit>
-      <trans-unit id="80JoLd0" resname="title.login">
-        <source>title.login</source>
-        <target>Secure Sign in</target>
-      </trans-unit>
-      <trans-unit id="6sz9l7G" resname="title.post_list">
-        <source>title.post_list</source>
-        <target>Post List</target>
-      </trans-unit>
-      <trans-unit id="6mAd7C7" resname="title.edit_post">
-        <source>title.edit_post</source>
-        <target>Edit post #%id%</target>
-      </trans-unit>
-      <trans-unit id="RElHkkW" resname="title.add_comment">
-        <source>title.add_comment</source>
-        <target>Add a comment</target>
-      </trans-unit>
-      <trans-unit id="KuKEZ2." resname="title.comment_error">
-        <source>title.comment_error</source>
-        <target>There was an error publishing your comment</target>
-      </trans-unit>
       <trans-unit id="1sstKF9" resname="title.edit_user">
         <source>title.edit_user</source>
         <target>Edit user</target>
-      </trans-unit>
-      <trans-unit id="rrU0GR8" resname="title.change_password">
-        <source>title.change_password</source>
-        <target>Change password</target>
-      </trans-unit>
-      <trans-unit id="Ffi98jp" resname="action.show">
-        <source>action.show</source>
-        <target>Show</target>
-      </trans-unit>
-      <trans-unit id="VO1bKFS" resname="action.show_post">
-        <source>action.show_post</source>
-        <target>Show post</target>
       </trans-unit>
       <trans-unit id="QbohvW1" resname="action.show_code">
         <source>action.show_code</source>
         <target>Show code</target>
       </trans-unit>
-      <trans-unit id="ovKkXwU" resname="action.edit">
-        <source>action.edit</source>
-        <target>Edit</target>
-      </trans-unit>
-      <trans-unit id="lpqpnUS" resname="action.edit_post">
-        <source>action.edit_post</source>
-        <target>Edit post</target>
-      </trans-unit>
       <trans-unit id="HLtdhYw" resname="action.save">
         <source>action.save</source>
         <target>Save changes</target>
-      </trans-unit>
-      <trans-unit id="d_4ma5r" resname="action.delete_post">
-        <source>action.delete_post</source>
-        <target>Delete post</target>
-      </trans-unit>
-      <trans-unit id="CAMlK1D" resname="delete_post_modal.title">
-        <source>delete_post_modal.title</source>
-        <target>Are you sure you want to delete this post?</target>
-      </trans-unit>
-      <trans-unit id="4FkRv.I" resname="delete_post_modal.body">
-        <source>delete_post_modal.body</source>
-        <target>This action cannot be undone.</target>
-      </trans-unit>
-      <trans-unit id="oRRFO4u" resname="label.delete_post">
-        <source>label.delete_post</source>
-        <target>Delete post</target>
-      </trans-unit>
-      <trans-unit id="8yeGT7d" resname="label.cancel">
-        <source>label.cancel</source>
-        <target>Cancel</target>
-      </trans-unit>
-      <trans-unit id="G1QItEF" resname="action.create_post">
-        <source>action.create_post</source>
-        <target>Create a new post</target>
-      </trans-unit>
-      <trans-unit id="J76H6bc" resname="label.create_post">
-        <source>label.create_post</source>
-        <target>Create post</target>
-      </trans-unit>
-      <trans-unit id="KM4MSbI" resname="label.save_and_create_new">
-        <source>label.save_and_create_new</source>
-        <target>Save and create new</target>
-      </trans-unit>
-      <trans-unit id="Rmxwd1D" resname="action.back_to_list">
-        <source>action.back_to_list</source>
-        <target>Back to the post list</target>
-      </trans-unit>
-      <trans-unit id="E36cr6o" resname="action.publish_comment">
-        <source>action.publish_comment</source>
-        <target>Publish comment</target>
-      </trans-unit>
-      <trans-unit id="z2pPSYV" resname="action.sign_in">
-        <source>action.sign_in</source>
-        <target>Sign in</target>
-      </trans-unit>
-      <trans-unit id="Y1PJw41" resname="action.browse_app">
-        <source>action.browse_app</source>
-        <target>Browse application</target>
-      </trans-unit>
-      <trans-unit id="l9A3J40" resname="action.browse_admin">
-        <source>action.browse_admin</source>
-        <target>Browse backend</target>
       </trans-unit>
       <trans-unit id="etGJjTo" resname="action.edit_user">
         <source>action.edit_user</source>
         <target>Edit user</target>
       </trans-unit>
-      <trans-unit id="CX_oSFd" resname="action.change_password">
-        <source>action.change_password</source>
-        <target>Change password</target>
-      </trans-unit>
-      <trans-unit id="UrRn8xj" resname="label.title">
-        <source>label.title</source>
-        <target>Title</target>
-      </trans-unit>
-      <trans-unit id="bxYZLcN" resname="label.author">
-        <source>label.author</source>
-        <target>Author</target>
-      </trans-unit>
-      <trans-unit id="uh.E_Fq" resname="label.author_email">
-        <source>label.author_email</source>
-        <target>Author email</target>
-      </trans-unit>
       <trans-unit id="LDhDPrF" resname="label.username">
         <source>label.username</source>
         <target>Username</target>
-      </trans-unit>
-      <trans-unit id="aYnbvsn" resname="label.fullname">
-        <source>label.fullname</source>
-        <target>Fullname</target>
-      </trans-unit>
-      <trans-unit id="D2N6_cP" resname="label.email">
-        <source>label.email</source>
-        <target>Email</target>
-      </trans-unit>
-      <trans-unit id="9pvowqn" resname="label.password">
-        <source>label.password</source>
-        <target>Password</target>
-      </trans-unit>
-      <trans-unit id="pGkejkU" resname="label.current_password">
-        <source>label.current_password</source>
-        <target>Current password</target>
-      </trans-unit>
-      <trans-unit id="iiWFLaI" resname="label.new_password">
-        <source>label.new_password</source>
-        <target>New password</target>
-      </trans-unit>
-      <trans-unit id="Ucl9Jfc" resname="label.new_password_confirm">
-        <source>label.new_password_confirm</source>
-        <target>Confirm password</target>
-      </trans-unit>
-      <trans-unit id="O59lP5d" resname="label.role">
-        <source>label.role</source>
-        <target>Role</target>
-      </trans-unit>
-      <trans-unit id="qqpGLJl" resname="label.content">
-        <source>label.content</source>
-        <target>Content</target>
-      </trans-unit>
-      <trans-unit id="tT7OhMP" resname="label.summary">
-        <source>label.summary</source>
-        <target>Summary</target>
-      </trans-unit>
-      <trans-unit id="xrlnqyo" resname="label.published_at">
-        <source>label.published_at</source>
-        <target>Published at</target>
-      </trans-unit>
-      <trans-unit id="ijQyGRo" resname="label.tags">
-        <source>label.tags</source>
-        <target>Tags</target>
-      </trans-unit>
-      <trans-unit id="zldXQq6" resname="label.actions">
-        <source>label.actions</source>
-        <target>Actions</target>
-      </trans-unit>
-      <trans-unit id="_SZYoOn" resname="title.post_new">
-        <source>title.post_new</source>
-        <target>Post creation</target>
-      </trans-unit>
-      <trans-unit id="1wYTt2x" resname="action.edit_contents">
-        <source>action.edit_contents</source>
-        <target>Edit contents</target>
-      </trans-unit>
-      <trans-unit id="sqML_MO" resname="menu.toggle_nav">
-        <source>menu.toggle_nav</source>
-        <target>Toggle navigation</target>
-      </trans-unit>
-      <trans-unit id="SWM2jM." resname="menu.choose_language">
-        <source>menu.choose_language</source>
-        <target>Choose language</target>
-      </trans-unit>
-      <trans-unit id="3XHWUzG" resname="menu.post_list">
-        <source>menu.post_list</source>
-        <target>Post list</target>
-      </trans-unit>
-      <trans-unit id="7eZ5X01" resname="menu.back_to_blog">
-        <source>menu.back_to_blog</source>
-        <target>Back to blog</target>
-      </trans-unit>
-      <trans-unit id="UoOv6mx" resname="menu.homepage">
-        <source>menu.homepage</source>
-        <target>Homepage</target>
-      </trans-unit>
-      <trans-unit id="wvvYSw_" resname="menu.admin">
-        <source>menu.admin</source>
-        <target>Backend</target>
-      </trans-unit>
-      <trans-unit id="rjDqmQR" resname="menu.user">
-        <source>menu.user</source>
-        <target>Account</target>
-      </trans-unit>
-      <trans-unit id="wBTFKFR" resname="menu.logout">
-        <source>menu.logout</source>
-        <target>Logout</target>
-      </trans-unit>
-      <trans-unit id="0gTEZVk" resname="menu.rss">
-        <source>menu.rss</source>
-        <target>Blog Posts RSS</target>
-      </trans-unit>
-      <trans-unit id="k6VxCsO" resname="menu.search">
-        <source>menu.search</source>
-        <target>Search</target>
-      </trans-unit>
-      <trans-unit id="zY.oLN." resname="post.to_publish_a_comment">
-        <source>post.to_publish_a_comment</source>
-        <target>to publish a comment</target>
-      </trans-unit>
-      <trans-unit id="is7pld7" resname="post.num_comments">
-        <source>post.num_comments</source>
-        <target>%count% comment|%count% comments</target>
-      </trans-unit>
-      <trans-unit id="vdsQrtG" resname="post.commented_on">
-        <source>post.commented_on</source>
-        <target>commented on</target>
-      </trans-unit>
-      <trans-unit id="UZzyX5e" resname="post.no_comments">
-        <source>post.no_comments</source>
-        <target>Be the first to comment on this post.</target>
-      </trans-unit>
-      <trans-unit id="aMaXcw0" resname="post.no_posts_found">
-        <source>post.no_posts_found</source>
-        <target>No posts found.</target>
-      </trans-unit>
-      <trans-unit id="uIfkb5m" resname="post.created_successfully">
-        <source>post.created_successfully</source>
-        <target>Post created successfully!</target>
-      </trans-unit>
-      <trans-unit id="1TdLwHn" resname="post.updated_successfully">
-        <source>post.updated_successfully</source>
-        <target>Post updated successfully!</target>
-      </trans-unit>
-      <trans-unit id="REYq3Ar" resname="post.deleted_successfully">
-        <source>post.deleted_successfully</source>
-        <target>Post deleted successfully!</target>
-      </trans-unit>
-      <trans-unit id="rAoWddb" resname="post.search_for">
-        <source>post.search_for</source>
-        <target>Search for...</target>
-      </trans-unit>
-      <trans-unit id="_SSBmQW" resname="post.search_no_results">
-        <source>post.search_no_results</source>
-        <target>No results found</target>
-      </trans-unit>
-      <trans-unit id="OBmPOoB" resname="user.updated_successfully">
-        <source>user.updated_successfully</source>
-        <target>User updated successfully!</target>
-      </trans-unit>
-      <trans-unit id="KheXs2k" resname="notification.comment_created">
-        <source>notification.comment_created</source>
-        <target>Your post received a comment!</target>
-      </trans-unit>
-      <trans-unit id="VEcVbGK" resname="notification.comment_created.description">
-        <source>notification.comment_created.description</source>
-        <target><![CDATA[Your post "%title%" has received a new comment. You can read the comment by following <a href="%link%">this link</a>]]></target>
-      </trans-unit>
-      <trans-unit id="JPjzTgz" resname="help.app_description">
-        <source>help.app_description</source>
-        <target><![CDATA[This is a <strong>demo application</strong> built in the Symfony Framework to illustrate the recommended way of developing Symfony applications.]]></target>
       </trans-unit>
       <trans-unit id="VgeTgE2" resname="help.show_code">
         <source>help.show_code</source>
         <target><![CDATA[Click on this button to show the source code of the <strong>Controller</strong> and <strong>template</strong> used to render this page.]]></target>
       </trans-unit>
-      <trans-unit id="tuBXYUW" resname="help.browse_app">
-        <source>help.browse_app</source>
-        <target><![CDATA[Browse the <strong>public section</strong> of the demo application.]]></target>
-      </trans-unit>
-      <trans-unit id="mUBeOVP" resname="help.browse_admin">
-        <source>help.browse_admin</source>
-        <target><![CDATA[Browse the <strong>admin backend</strong> of the demo application.]]></target>
-      </trans-unit>
-      <trans-unit id="7s0ZMku" resname="help.login_users">
-        <source>help.login_users</source>
-        <target>Try either of the following users</target>
-      </trans-unit>
-      <trans-unit id="NTiRWXv" resname="help.role_user">
-        <source>help.role_user</source>
-        <target>regular user</target>
-      </trans-unit>
-      <trans-unit id="WVrtpfW" resname="help.role_admin">
-        <source>help.role_admin</source>
-        <target>administrator</target>
-      </trans-unit>
-      <trans-unit id="m.1q26M" resname="help.reload_fixtures">
-        <source>help.reload_fixtures</source>
-        <target>If these users don't work, reload application fixtures by running this command from the terminal:</target>
-      </trans-unit>
-      <trans-unit id=".rVk3CB" resname="help.add_user">
-        <source>help.add_user</source>
-        <target>If you want to create new users, run this other command:</target>
-      </trans-unit>
-      <trans-unit id="Km5w.Hs" resname="help.more_information">
-        <source>help.more_information</source>
-        <target><![CDATA[For more information, check out the <a href="https://symfony.com/doc">Symfony doc</a>.]]></target>
-      </trans-unit>
       <trans-unit id="wtG.cxy" resname="info.change_password">
         <source>info.change_password</source>
         <target>After changing your password, you will be logged out of the application.</target>
       </trans-unit>
-      <trans-unit id="DkZtOOL" resname="rss.title">
-        <source>rss.title</source>
-        <target>Symfony Demo blog</target>
+      <trans-unit id="80JoLd0" resname="title.login">
+        <source>title.login</source>
+        <target>Login</target>
       </trans-unit>
-      <trans-unit id="ZFPsu41" resname="rss.description">
-        <source>rss.description</source>
-        <target>Most recent posts published on the Symfony Demo blog</target>
+      <trans-unit id="9pvowqn" resname="label.password">
+        <source>label.password</source>
+        <target>Password</target>
+      </trans-unit>
+      <trans-unit id="gLN0C81" resname="action.log_in">
+        <source>action.log_in</source>
+        <target>Log in</target>
+      </trans-unit>
+      <trans-unit id="vJwSCBO" resname="title.contentlisting">
+        <source>title.contentlisting</source>
+        <target>Contentlisting</target>
+      </trans-unit>
+      <trans-unit id="CX_oSFd" resname="action.change_password">
+        <source>action.change_password</source>
+        <target>Change password</target>
+      </trans-unit>
+      <trans-unit id="SNELzJ2" resname="field.id">
+        <source>field.id</source>
+        <target>ID</target>
+      </trans-unit>
+      <trans-unit id="FuCyk5C" resname="field.status">
+        <source>field.status</source>
+        <target>Status</target>
+      </trans-unit>
+      <trans-unit id="O9wtVOp" resname="field.createdAt">
+        <source>field.createdAt</source>
+        <target>Created at</target>
+      </trans-unit>
+      <trans-unit id="eVkSIKu" resname="field.modifiedAt">
+        <source>field.modifiedAt</source>
+        <target>Modified at</target>
+      </trans-unit>
+      <trans-unit id="3gdi1dy" resname="field.publishedAt">
+        <source>field.publishedAt</source>
+        <target>Published at</target>
+      </trans-unit>
+      <trans-unit id="eN7IfEL" resname="field.depublishedAt">
+        <source>field.depublishedAt</source>
+        <target>Depublished at</target>
+      </trans-unit>
+      <trans-unit id="VKhfRZB" resname="field.title">
+        <source>field.title</source>
+        <target>Title</target>
+      </trans-unit>
+      <trans-unit id="7_wwX8J" resname="field.description">
+        <source>field.description</source>
+        <target>Description</target>
+      </trans-unit>
+      <trans-unit id="hjDmcPC" resname="field.copyright">
+        <source>field.copyright</source>
+        <target>Copyright</target>
+      </trans-unit>
+      <trans-unit id="v0sitU8" resname="field.originalFilename">
+        <source>field.originalFilename</source>
+        <target>Original filename</target>
+      </trans-unit>
+      <trans-unit id="vlRe8Tx" resname="field.width">
+        <source>field.width</source>
+        <target>width</target>
+      </trans-unit>
+      <trans-unit id="CZbXbM_" resname="field.height">
+        <source>field.height</source>
+        <target>height</target>
+      </trans-unit>
+      <trans-unit id="Sz_u.OS" resname="field.filesize">
+        <source>field.filesize</source>
+        <target>Filesize</target>
       </trans-unit>
     </body>
   </file>
