--- a/translations/messages.fr.xlf
+++ b/translations/messages.fr.xlf
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en" trgLang="fr">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="fr" trgLang="fr">
   <file id="messages.fr">
     <unit id="80JoLd0" name="title.login">
       <notes>
@@ -131,7 +131,7 @@
       </notes>
       <segment>
         <source>about.visit_bolt</source>
-        <target></target>
+        <target>Visitez Bolt.cm</target>
       </segment>
     </unit>
     <unit id="UZFanGF" name="about.bolt_documentation">
