--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="nl" trgLang="en">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en" trgLang="en">
   <file id="messages.en">
     <unit id="tbB2gib" name="not_available">
       <notes>
@@ -423,7 +423,7 @@
       </notes>
       <segment>
         <source>label.fullname</source>
-        <target></target>
+        <target>Full name</target>
       </segment>
     </unit>
     <unit id="D2N6_cP" name="label.email">
@@ -433,7 +433,7 @@
       </notes>
       <segment>
         <source>label.email</source>
-        <target></target>
+        <target>Email address</target>
       </segment>
     </unit>
     <unit id="pGkejkU" name="label.current_password">
@@ -489,7 +489,7 @@
       </notes>
       <segment>
         <source>user.updated_successfully</source>
-        <target></target>
+        <target>Updated Sucessfully</target>
       </segment>
     </unit>
     <unit id="3hkt.eH" name="content.updated_successfully">
@@ -531,6 +531,84 @@
       <segment>
         <source>editfile.could_not_write</source>
         <target>Could not write Media item</target>
+      </segment>
+    </unit>
+    <unit id="mEDsKHk" name="label.locale">
+      <segment>
+        <source>label.locale</source>
+        <target>Locale</target>
+      </segment>
+    </unit>
+    <unit id="98Q5SA2" name="label.backend_theme">
+      <segment>
+        <source>label.backend_theme</source>
+        <target>Backend theme</target>
+      </segment>
+    </unit>
+    <unit id="Z84BVRW" name="English (en)">
+      <segment>
+        <source>English (en)</source>
+        <target>English (en)</target>
+      </segment>
+    </unit>
+    <unit id="eG9ABZd" name="Nederlands (dutch, nl)">
+      <segment>
+        <source>Nederlands (dutch, nl)</source>
+        <target>Nederlands (dutch, nl)</target>
+      </segment>
+    </unit>
+    <unit id="57LcBXV" name="Español (Spanish, es)">
+      <segment>
+        <source>Español (Spanish, es)</source>
+        <target>Español (Spanish, es)</target>
+      </segment>
+    </unit>
+    <unit id="e7RdvJ0" name="français (French, fr)">
+      <segment>
+        <source>français (French, fr)</source>
+        <target>français (French, fr)</target>
+      </segment>
+    </unit>
+    <unit id="U1vrep2" name="Deutsch (German, de)">
+      <segment>
+        <source>Deutsch (German, de)</source>
+        <target>Deutsch (German, de)</target>
+      </segment>
+    </unit>
+    <unit id="EsWjyMS" name="Język Polski (Polish, pl)">
+      <segment>
+        <source>Język Polski (Polish, pl)</source>
+        <target>Język Polski (Polish, pl)</target>
+      </segment>
+    </unit>
+    <unit id="fbEbOrT" name="Brasilian Portuguese (Brasilian Portuguese, pt_BR)">
+      <segment>
+        <source>Brasilian Portuguese (Brasilian Portuguese, pt_BR)</source>
+        <target>Brasilian Portuguese (Brasilian Portuguese, pt_BR)</target>
+      </segment>
+    </unit>
+    <unit id="pBUPCm9" name="Italiano (Italian, it)">
+      <segment>
+        <source>Italiano (Italian, it)</source>
+        <target>Italiano (Italian, it)</target>
+      </segment>
+    </unit>
+    <unit id="Oiwdkpg" name="The Default theme">
+      <segment>
+        <source>The Default theme</source>
+        <target>The Default theme</target>
+      </segment>
+    </unit>
+    <unit id="C389Knp" name="The Default Dark theme">
+      <segment>
+        <source>The Default Dark theme</source>
+        <target>The Default Dark theme</target>
+      </segment>
+    </unit>
+    <unit id="kouGbMq" name="WoordPers: Kinda looks like that other CMS">
+      <segment>
+        <source>WoordPers: Kinda looks like that other CMS</source>
+        <target>WoordPers: Kinda looks like that other CMS</target>
       </segment>
     </unit>
   </file>
