--- a/translations/messages.es.xlf
+++ b/translations/messages.es.xlf
@@ -7,5 +7,11 @@
         <target>Visita bolt.cm</target>
       </segment>
     </unit>
+    <unit id="1sstKF9" name="title.edit_user">
+      <segment>
+        <source>title.edit_user</source>
+        <target>Editar Usuario</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
