Injecting labels in topbar Vue component

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -839,5 +839,23 @@
         <target>Filename</target>
       </segment>
     </unit>
+    <unit id="XNTbZW6" name="action.visit_site">
+      <segment>
+        <source>action.visit_site</source>
+        <target>Visit site</target>
+      </segment>
+    </unit>
+    <unit id="KfVJho2" name="action.create_new">
+      <segment>
+        <source>action.create_new</source>
+        <target>Create new …</target>
+      </segment>
+    </unit>
+    <unit id="b_RPpcB" name="general.greeting">
+      <segment>
+        <source>general.greeting</source>
+        <target>Hey, %name%!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
