added custom notifications

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -869,5 +869,11 @@
         <target>Edit Profile</target>
       </segment>
     </unit>
+    <unit id="N_0yRcH" name="action.close_alert">
+      <segment>
+        <source>action.close_alert</source>
+        <target>close</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
