--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -881,5 +881,23 @@
         <target>API</target>
       </segment>
     </unit>
+    <unit id="i4cbdta" name="caption.all_configuration_files">
+      <segment>
+        <source>caption.all_configuration_files</source>
+        <target>All configuration files</target>
+      </segment>
+    </unit>
+    <unit id="OpKTKAL" name="caption.maintenance">
+      <segment>
+        <source>caption.maintenance</source>
+        <target>Maintenance</target>
+      </segment>
+    </unit>
+    <unit id="hGJoUs5" name="caption.fixtures_dummy_content">
+      <segment>
+        <source>caption.fixtures_dummy_content</source>
+        <target>Fixtures (Dummy Content)</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
