Doing some work on 1i8n in core.

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -905,5 +905,11 @@
         <target>Installation checks</target>
       </segment>
     </unit>
+    <unit id="pNPctrH" name="form.select_language">
+      <segment>
+        <source>form.select_language</source>
+        <target>Select language</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
